Updates for deprecated SecurityManager